tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_u8_assignment.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u8`
  ┌─ [snippet]:3:11
  │
3 │   x: u8 = 260
  │           ^^^ does not fit into type `u8`


